fix: Adicionando arquivo .env

--- a/.env
+++ b/.env
@@ -10,11 +10,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql-ag-br1-10.hospedagemelastica.com.br
 DB_PORT=3306
-DB_DATABASE=db_th_solucoes
-DB_USERNAME=root
-DB_PASSWORD="(th@SOLUT#1339)"
+DB_DATABASE=odmzus_bd
+DB_USERNAME=odmzus_user
+DB_PASSWORD="Hnz}bgGLYNUq60X"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
