fix: Adicionando arquivo .env

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=th-solucoes-api
 APP_ENV=local
 APP_KEY=base64:2voIKoF/7PZsXR8+QyRgK0YHAhZRx552/XQj4qQBxzs=
 APP_DEBUG=true
-APP_URL=http://localhost/th-solucoes-api
+APP_URL=http://odmzus.hospedagemelastica.com.br/
 APP_TIMEZONE=America/Sao_Paulo
 
 LOG_CHANNEL=stack
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=mysql-ag-br1-10.hospedagemelastica.com.br
-DB_PORT=3306
+DB_PORT=21
 DB_DATABASE=odmzus_bd
 DB_USERNAME=odmzus_user
 DB_PASSWORD="Hnz}bgGLYNUq60X"
