--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=th-solucoes-api
 APP_ENV=local
 APP_KEY=base64:yGn6+OiEZVSwKUlKeLUf7Rga1YHK/vOhk330dZBdBD8=
 APP_DEBUG=true
-APP_URL=http://odmzus.hospedagemelastica.com.br/
+APP_URL=http://qdokcv.hospedagemelastica.com.br/
 APP_TIMEZONE=America/Sao_Paulo
 
 LOG_CHANNEL=stack
@@ -10,11 +10,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql-ag-br1-10.hospedagemelastica.com.br
+DB_HOST=mysql-ag-br1-15.hospedagemelastica.com.br
 DB_PORT=3306
-DB_DATABASE=odmzus_bd
-DB_USERNAME=odmzus_user
-DB_PASSWORD="Hnz}bgGLYNUq60X"
+DB_DATABASE=nemwab_bd
+DB_USERNAME=nemwab_user
+DB_PASSWORD="QL:4y>CsRxAPYc2M"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
