--- a/.env
+++ b/.env
@@ -10,11 +10,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql-ag-br1-15.hospedagemelastica.com.br
+DB_HOST=mysql-ag-br1-1.hospedagemelastica.com.br
 DB_PORT=3306
 DB_DATABASE=nemwab_bd
 DB_USERNAME=nemwab_user
-DB_PASSWORD="QL:4y>CsRxAPYc2M"
+DB_PASSWORD="SS27ivF&7(ImG9B&"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
