fix: URL principal

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=th-solucoes-api
 APP_ENV=local
 APP_KEY=base64:yGn6+OiEZVSwKUlKeLUf7Rga1YHK/vOhk330dZBdBD8=
 APP_DEBUG=true
-APP_URL=http://qdokcv.hospedagemelastica.com.br
+APP_URL=https://thsolucoes.com/
 APP_TIMEZONE=America/Sao_Paulo
 
 LOG_CHANNEL=stack
@@ -33,7 +33,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.thsolucoes.com
 MAIL_PORT=465
 MAIL_USERNAME=ticket@thsolucoes.com
-MAIL_PASSWORD=8c9a0d3d3ddff0
+MAIL_PASSWORD="(th@1424)"
 MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS="ticket@thsolucoes.com"
 MAIL_FROM_NAME="TH Soluções"
