fix: Alterações das credenciais

--- a/.env
+++ b/.env
@@ -33,7 +33,7 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.thsolucoes.com
 MAIL_PORT=465
 MAIL_USERNAME=ticket@thsolucoes.com
-MAIL_PASSWORD="(th@1424)"
+MAIL_PASSWORD=(th@1424)
 MAIL_ENCRYPTION=ssl
 MAIL_FROM_ADDRESS="ticket@thsolucoes.com"
 MAIL_FROM_NAME="TH Soluções"
