--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=th-solucoes-api
 APP_ENV=local
 APP_KEY=base64:yGn6+OiEZVSwKUlKeLUf7Rga1YHK/vOhk330dZBdBD8=
 APP_DEBUG=true
-APP_URL=https://nemwab.hospedagemelastica.com.br
+APP_URL=https://api.thsolucoes.com
 APP_TIMEZONE=America/Sao_Paulo
 
 LOG_CHANNEL=stack
